# optics_gui_wx26

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sdfsd.py
Dev/01_Cycle_Time/: 01_Test_Cycle_Time.ipynb
Dev/02_Machine_State/: machine_state_plan.txt  machine_state_starting_functions.py  machine_state_tests.ipynb  machine_state_writer.py
Dev/03_MADX_Model/: madx_model_tests.ipynb
Dev/04_Error_Table_Utilities/: cycle_time.py  errors_tests.ipynb
Dev/04_MADX_Model_Revisit/: machine_state_tests.ipynb  madx_model_tests_updated.ipynb  tune_control.py
Dev/05_Orbit_Branches/: machine_state.py  madx_model.py  orbit_branch_tests.ipynb
Dev/06_Tune_Matching/: machine_state_defaults.py  orbit_branch.py  tune_matching_tests.ipynb
Dev/07_Orbit_Correction/: correctors.py  errors.py  madx_model.py  orbit_correction_tests.ipynb  tune_matching.py  tune_plots.py
Dev/08_Envelope/: envelope_tests.ipynb  orbit_correction.py
Dev/09_Aperture/: aperture_tests.ipynb
Dev/10_Tune/: aperture.py  madx_model.py  tune.py  tune_plots.py  tune_tests.ipynb
Dev/11_Snapshot/: chromaticity_notes.md  envelope.py  error_plots.py  snapshot.py  snapshot_tests.ipynb  snapshot_user_guide.ipynb  tune_plots.py
Dev/12_IO/: package_student_guide.ipynb
Dev/Error_Tables/: jan26_survey_corrected.tfs  jan26_survey_corrected_hmatch.tfs
Dev/old_sources/: cpymad_2025_orbit_methods.py  cpymad_helpers.py
src/optics_gui/: __init__.py  aperture.py  correctors.py  envelope.py  error_plots.py  errors.py  machine_state.py  madx_model.py  orbit_branch.py  snapshot.py  (+4 more)
tests/: test_packaging_smoke.py
(+7 files in other folders)
