[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optics-gui"
version = "0.1.0"
description = "Backend/model layer for the ISIS RCS optics GUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cpymad",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
optics_gui = ["data/aperture/*.csv"]
